--- a/templates/name.html
+++ b/templates/name.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head><title>Axum + Tera</title></head>
+<head>
+  <title>Axum + Tera</title>
+  <style type="text/css">
+    body {
+        background-color: #e8e8e8;
+    }
+  </style>
+</head>
 <body>
   <h1>Olá, {{ name }}!</h1>
 </body>
