--- a/templates/name.html
+++ b/templates/name.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head><title>Axum + Tera</title></head>
-<body>
-  <h1>Olá, {{ name }}!</h1>
-</body>
-</html>
+{% extends "partials/base.html" %}
 
+{% block title %}Welcome {{ name }}{% endblock %}
+
+{% block content %}
+    <h1>Welcome, {{ name }}!</h1>
+{% endblock %}
